# BirdDetection

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
apps/backend/: pyproject.toml
apps/backend/app/: database.py  inference.py  main.py  models.py  schemas.py
apps/backend/tests/: test_health_and_history.py
apps/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.app.json
apps/frontend/src/: main.tsx  router.tsx  styles.css
apps/frontend/src/components/: FileUploader.tsx  PredictionTable.tsx
apps/frontend/src/components/ui/: alert.tsx  card.tsx  table.tsx
apps/frontend/src/lib/: api.ts  utils.ts
apps/frontend/src/routes/: DashboardPage.tsx  HistoryPage.tsx  RootLayout.tsx
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: general.md  html-css.md  javascript.md  python.md  typescript.md
conductor/tracks/backend_api_20260401/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/bird_recognition_20260401/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/frontend_dashboard_20260401/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/integration_polish_20260401/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/ml_training_20260401/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/scaffolding_devops_20260401/: index.md  metadata.json  plan.md  spec.md
training/: pyproject.toml  train.ipynb
