[project]
name = "bird-training"
version = "0.1.0"
description = "Training notebook dependencies for bird model"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3.0",
  "torchvision>=0.18.0",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.1",
  "pillow>=10.4.0",
  "matplotlib>=3.9.0",
  "gdown>=5.2.0",
  "jupyter>=1.0.0",
]
